Fixed som codenarc violations